--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,6 +2,13 @@
     height: 35px;
     width: 35px;
 }
+#profile-pic{
+  width: 160px;
+  height: 160px ;
+  border-radius: 60%;
+  margin-left: auto;
+  margin-right: auto;
+}
 #messages{
 	background-color: grey;
 	color: #fff;
