--- a/staticfiles/css/main.css
+++ b/staticfiles/css/main.css
@@ -2,6 +2,13 @@
     height: 35px;
     width: 35px;
 }
+#profile-pic{
+  width: 160px;
+  height: 160px ;
+  border-radius: 60%;
+  margin-left: auto;
+  margin-right: auto;
+}
 #messages{
 	background-color: grey;
 	color: #fff;
@@ -27,6 +34,24 @@
     color: red;
   }
 
+  #low{
+    color: yellowgreen
+  }
+
+  #minor{
+    color: yellow
+  }
+
+  #major{
+    color: rgb(255, 145, 0);
+  }
+
+  #critical{
+    color: rgb(190, 8, 8);
+  }
+  #issue{
+    color: purple;
+  }
   svg{
     fill: currentColor;
   }
