added docker stuff

--- a/base/templates/base/blog.html
+++ b/base/templates/base/blog.html
@@ -46,7 +46,7 @@
           <div id="support-logo" class="d-flex flex-items-end">
           </div>
           <div id="header-buttons" class="d-flex flex-items-end">
-                <a href="{% url 'aboutme' %}"><img class="avatar mr-4" alt="jonrohan" src="{% static 'images/dude.jpeg' %}"  style="border-radius: 30px;" width="48" height="48" title="Raghav Gade"/></a>
+                <a href="{% url 'aboutme' %}"><img class="avatar mr-4" alt="jonrohan" src="{% static 'images/profile.png' %}"  style="border-radius: 30px;" width="48" height="48" title="Raghav Gade"/></a>
                 <b><a class="mr-4" href="{% url 'home'%}" style="color: #d3d4d4;">Projects</a></b>
                 <b><a class="mr-4" href="{% url 'blog'%}" style="color: #d3d4d4;">Blog</a></b>
                 <b><a class="mr-4" href="{% url 'bughome'%}" style="color: #d3d4d4;">Bugs</a></b>
