--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -44,7 +44,7 @@
             </span>
           </div>
           <div id="header-buttons" class="d-flex flex-items-end">
-                <a href="{% url 'aboutme' %}"><img class="avatar mr-4" alt="jonrohan" src="{% static 'images/dude.jpeg' %}"  style="border-radius: 30px;" width="48" height="48" title="Raghav Gade"/></a>
+                <a href="{% url 'aboutme' %}"><img class="avatar mr-4" alt="jonrohan" src="{% static 'images/profile.png' %}"  style="border-radius: 30px;" width="48" height="48" title="Name"/></a>
                 <b><a class="mr-4" href="{% url 'home'%}">Projects</a></b>
                 <b><a class="mr-4" href="{% url 'blog'%}">Blog</a></b>
                 <b><a class="mr-4" href="{% url 'bughome'%}">Bugs</a></b>
