--- a/base/templates/base/projects.html
+++ b/base/templates/base/projects.html
@@ -39,7 +39,7 @@
               </div>
               <div class="UnderlineNav-actions">
                 {% if request.user.is_authenticated %}
-                <form id="tickets-refresh" class="d-inline"  >
+                <form  class="d-inline"  >
                   <input type="submit" onclick="window.location.reload();" value="Refresh" class="btn btn-sm mr-2" />
                 </form>            
                 <a class="btn btn-sm btn-primary mb-2 mt-2"  href="{% url 'newproject' %}">New project</a>
@@ -131,10 +131,20 @@
                     <div class="col-6 pl-2 text-small text-gray float-left">
                       #{{project.project_id}} 
                       created {{project.date_created}}
+                      <br>
                       {% if project.github_link %}
                       <span  style="color: black;">
-                        <a href="{{ project.github_link }}" target="_blank">GitHub link<svg height="18" class="octicon octicon-mark-github" fill="#24292E" viewBox="0 0 16 16" version="1.1" width="32" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path></svg></a>
+                        <a style="text-decoration: none;" href="{{ project.github_link }}" target="_blank">
+                          <svg  height="18" class="octicon octicon-mark-github" fill="#24292E" viewBox="0 0 16 16" version="1.1" width="32" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path></svg>
+                        </a>
                       </span>
+                      {% endif %}
+                      {% if project.dockerhub_link %}
+                      <span  style="color: black;">
+                        <a style="text-decoration: none; color: #0366D6;" href="{{ project.dockerhub_link }}" target="_blank">
+                          <img src="{% static 'images/docker.png' %}" style=" width: 24px;" >
+                        </a>
+                      </span> 
                       {% endif %}
                       {% if project.hosted == True %}
                       <a class="ml-2" href="{%url 'newticket' %} " style="color: rgb(196,33,33); text-decoration: none; font-size: small;">Report Bugs <svg style="color: rgb(196,33,33);" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M1.75 1.5a.25.25 0 00-.25.25v9.5c0 .138.112.25.25.25h2a.75.75 0 01.75.75v2.19l2.72-2.72a.75.75 0 01.53-.22h6.5a.25.25 0 00.25-.25v-9.5a.25.25 0 00-.25-.25H1.75zM0 1.75C0 .784.784 0 1.75 0h12.5C15.216 0 16 .784 16 1.75v9.5A1.75 1.75 0 0114.25 13H8.06l-2.573 2.573A1.457 1.457 0 013 14.543V13H1.75A1.75 1.75 0 010 11.25v-9.5zM9 9a1 1 0 11-2 0 1 1 0 012 0zm-.25-5.25a.75.75 0 00-1.5 0v2.5a.75.75 0 001.5 0v-2.5z"></path></svg></a>
