--- a/base/templates/base/specificticket.html
+++ b/base/templates/base/specificticket.html
@@ -6,6 +6,9 @@
 
 {% block content %}
 
+<style> .frame-example { min-height: 500px; } </style>
+<link href="https://unpkg.com/@github/details-dialog-element/dist/index.css" rel="stylesheet" />
+
 <div class="container-lg px-3 p-2"> 
         <div>
             <div class="col-12 clearfix mt-2">
@@ -19,15 +22,40 @@
 
                 </div>
             </div>
-            <h1 class="" style="font-weight: normal;">{{ ticket.subject }} #{{ticket.tracking_id}}</h1>
-            {% if ticket.ticket_status == "Open"%}
-            <span class="State" style="width:100px; background-color: yellowgreen;">{{ticket.ticket_status}}</span>
-            {% elif ticket.ticket_status == "Closed"%}
-            <span class="State" style="width:100px; background-color: rgb(231, 28, 28);">{{ticket.ticket_status}}</span>
-            {% elif ticket.ticket_status == "Resolved"%}
-            <span class="State" style="width:100px; background-color: #3ebe63;">{{ticket.ticket_status}}</span>
-            {% endif %}
-            &nbsp;&nbsp;  <text style="color: gray;"> <strong>{{username}}</strong> opened this ticket on {{ticket.date_created}}</text>
+            <h1 class="" style="font-weight: normal;">{{ ticket.subject }} #{{ticket.tracking_id}} </h1>
+            <details class="details-reset details-overlay details-overlay-dark">
+              <summary >
+                {% if ticket.ticket_status == "Open"%}
+                <span class="State" style="width:100px; background-color: yellowgreen;">{{ticket.ticket_status}}</span>
+                {% elif ticket.ticket_status == "Closed"%}
+                <span class="State" style="width:100px; background-color: rgb(231, 28, 28);">{{ticket.ticket_status}}</span>
+                {% elif ticket.ticket_status == "Resolved"%}
+                <span class="State" style="width:100px; background-color: #3ebe63;">{{ticket.ticket_status}}</span>
+                {% endif %}
+              </summary> 
+              <details-dialog style="display: inline-block;" class="Box Box--overlay d-flex flex-column anim-fade-in fast">
+                <div class="Box-header">
+                  <button class="Box-btn-octicon btn-octicon float-right" type="button" aria-label="Close dialog" data-close-dialog>
+                    <!-- <%= octicon "x" %> -->
+                    <a href="{%url 'ticket' ticket.tracking_id%}" ><svg class="octicon octicon-x" viewBox="0 0 12 16" version="1.1" width="12" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M7.48 8l3.75 3.75-1.48 1.48L6 9.48l-3.75 3.75-1.48-1.48L4.52 8 .77 4.25l1.48-1.48L6 6.52l3.75-3.75 1.48 1.48L7.48 8z"></path></svg></a>
+                  </button>
+                  <h3 class="Box-title">Change Status</h3>
+                </div>
+                <div class="overflow-auto">
+                  <div class="Box-body overflow-auto">
+                    <p>
+                      <form action="" autocomplete="off" method="POST">
+                        {% csrf_token %}
+                        {{ form2|crispy }}
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                      </form>
+                    </p>
+                  </div>
+                </div>
+              </details-dialog>
+            </details>
+            
+              <text style="color: gray; display: inline-block;"> <strong>{{username}}</strong> opened this ticket on {{ticket.date_created}}</text>
             <hr>
             <div class="pl-8 pr-4 pb-8 pt-4">
                 <div class="TimelineItem" >
@@ -61,7 +89,6 @@
                 {% if comment.tracking.tracking_id == ticket.tracking_id %}
               <div class="TimelineItem" >
                 <div class="TimelineItem-badge" >
-                    <!-- octicon("flame") -->
                     <strong>C</strong>
                   </div>
                 <div class="timeline-comment-group TimelineItem-body my-0">
@@ -101,6 +128,9 @@
               <hr class="m-0">
               {% endif %}
               <br>
+              {% if ticket.ticket_status == "Resolved" %}
+              <b>Issue Resolved. Open new ticket for other queries.</b>
+              {% else %}
               <div style="width: 400px; ">
               <form action="" autocomplete="off" method="POST">
                 {% csrf_token %}
@@ -110,6 +140,7 @@
                 <a class="btn btn-sm btn-danger "  href="{% url 'ticket' ticket.tracking_id%}">Cancel</a>
             </form>
               </div>
+              {% endif %}
             </div>
         </div>
 </div>
