--- a/base/templates/base/bug.html
+++ b/base/templates/base/bug.html
@@ -6,13 +6,120 @@
 
 {% block content%}
 {% include 'base/messages.html' %}
-<div class="d-flex flex-wrap flex-items-center flex-justify-center pt-6 pb-6">
-    <div class="pt-4 d-flex flex-wrap flex-items-center flex-justify-center">
-        <svg style="color: #0366d6;"   xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="50" height="50"><path fill-rule="evenodd" d="M7.875 2.292a.125.125 0 00-.032.018A7.24 7.24 0 004.75 8.25a7.247 7.247 0 003.654 6.297c.57.327.982.955.941 1.682v.002l-.317 6.058a.75.75 0 11-1.498-.078l.317-6.062v-.004c.006-.09-.047-.215-.188-.296A8.747 8.747 0 013.25 8.25a8.74 8.74 0 013.732-7.169 1.547 1.547 0 011.709-.064c.484.292.809.835.809 1.46v4.714a.25.25 0 00.119.213l2.25 1.385c.08.05.182.05.262 0l2.25-1.385a.25.25 0 00.119-.213V2.478c0-.626.325-1.169.81-1.461a1.547 1.547 0 011.708.064 8.74 8.74 0 013.732 7.17 8.747 8.747 0 01-4.41 7.598c-.14.081-.193.206-.188.296v.004l.318 6.062a.75.75 0 11-1.498.078l-.317-6.058v-.002c-.041-.727.37-1.355.94-1.682A7.247 7.247 0 0019.25 8.25a7.24 7.24 0 00-3.093-5.94.125.125 0 00-.032-.018l-.01-.001c-.003 0-.014 0-.031.01-.036.022-.084.079-.084.177V7.19a1.75 1.75 0 01-.833 1.49l-2.25 1.385a1.75 1.75 0 01-1.834 0l-2.25-1.384A1.75 1.75 0 018 7.192V2.477c0-.098-.048-.155-.084-.176a.062.062 0 00-.031-.011l-.01.001z"></path></svg>
-      <h1 class="px-2">Under Construction. Will be updated soon.<h1>
-      <svg style="color: #0366d6;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="56" height="56"><path d="M12.5 7.25a.75.75 0 00-1.5 0v5.5c0 .27.144.518.378.651l3.5 2a.75.75 0 00.744-1.302L12.5 12.315V7.25z"></path><path fill-rule="evenodd" d="M12 1C5.925 1 1 5.925 1 12s4.925 11 11 11 11-4.925 11-11S18.075 1 12 1zM2.5 12a9.5 9.5 0 1119 0 9.5 9.5 0 01-19 0z"></path></svg>
+
+
+
+
+<div class="col-12 " style="align-items: center;">
+<div class="row m-6 float-center" style=" margin-top: 70px;">
+{% for project in projects %}
+    
+    {% if project.hosted and project.project_bugs == False %}
+    <div  class="Box" id="profile-pic" style="border-width:20px ;border-color: #3eb336; margin:40px; text-align: center; ">
+      <div class="Box pt-7 " style=" border-width: 20px; border-color:yellowgreen;width: 161px;height: 161px ;border-radius: 60%;">
+          <strong>{{project.project_title}}</strong>
+          <br>
+          {% if project.github_link %}
+          <a href="{{project.github_link}}">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path></svg>
+          </a>
+          {% endif %}
+          {% if project.dockerhub_link %}
+          <span  style="color: black;">
+            <a style="text-decoration: none; color: #0366D6;" href="{{ project.dockerhub_link }}" target="_blank">
+              <img src="{% static 'images/docker.png' %}" style=" width: 24px;" >
+            </a>
+          </span> 
+          {% endif %}
+        </div>
+      </div>
+    {% elif project.hosted == False and project.project_bugs %}
+    <div  class="Box" id="profile-pic" style="border-width:20px ;border-color: #0366d6; margin:40px; text-align: center; ">
+      <div class="Box pt-7 " style=" border-width: 20px; border-color:red;width: 161px;height: 161px ;border-radius: 60%;">
+          <strong>{{project.project_title}}</strong>
+          <br>
+          {% if project.github_link %}
+          <a href="{{project.github_link}}">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path></svg>
+          </a>
+          {% endif %}
+          {% if project.dockerhub_link %}
+            <span  style="color: black;">
+              <a style="text-decoration: none; color: #0366D6;" href="{{ project.dockerhub_link }}" target="_blank">
+                <img src="{% static 'images/docker.png' %}" style=" width: 24px;" >
+              </a>
+            </span> 
+          {% endif %}
+        </div>
+      </div>
+      {% elif project.hosted  and project.project_bugs %}
+      <div  class="Box" id="profile-pic" style="border-width:20px ;border-color: red; margin:40px; text-align: center; ">
+        <div class="Box pt-7 " style=" border-width: 20px; border-color:orange;width: 161px;height: 161px ;border-radius: 60%;">
+            <strong>{{project.project_title}}</strong>
+            <br>
+            {% if project.github_link %}
+            <a href="{{project.github_link}}">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path></svg>
+            </a>
+            {% endif %}
+            {% if project.dockerhub_link %}
+            <span  style="color: black;">
+              <a style="text-decoration: none; color: #0366D6;" href="{{ project.dockerhub_link }}" target="_blank">
+                <img src="{% static 'images/docker.png' %}" style=" width: 24px;" >
+              </a>
+            </span> 
+          {% endif %}
+          </div>
+        </div>
+        {% elif project.hosted == False and project.project_bugs == False %}
+        <div  class="Box" id="profile-pic" style="border-width:20px ;border-color: #0366d6; margin:40px; text-align: center; ">
+          <div class="Box pt-7 " style=" border-width: 20px; border-color:yellowgreen;width: 161px;height: 161px ;border-radius: 60%;">
+              <strong>{{project.project_title}}</strong>
+              <br>
+              {% if project.github_link %}
+              <a href="{{project.github_link}}">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path></svg>
+              </a>
+              {% endif %}
+              {% if project.dockerhub_link %}
+                <span  style="color: black;">
+                  <a style="text-decoration: none; color: #0366D6;" href="{{ project.dockerhub_link }}" target="_blank">
+                    <img src="{% static 'images/docker.png' %}" style=" width: 24px;" >
+                  </a>
+                </span> 
+              {% endif %}
+              </div>
+          </div>
+    {% endif %}
+<br>
+{% endfor %}
+</div>
+<br>
+<div class="d-flex flex-wrap flex-items-left flex-justify-left ">
+    <div class=" d-flex flex-wrap flex-items-left flex-justify-left">
+      <details class="details-reset " style="margin-left: 150px;">
+        <summary class="btn-link" style="outline: none;">Help <span class="dropdown-caret"></summary>
+            Application Status
+          <li>
+            <svg id="blue"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8z"></path></svg>&nbsp;->&nbsp;  Not Hosted
+          </li>
+          <li>
+            <svg id="dg"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8z"></path></svg>&nbsp;->&nbsp;  Hosted
+          </li>
+          <li>
+            <svg id="low"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8z"></path></svg>&nbsp;->&nbsp;  No bugs
+          </li>
+          <li>
+            <svg id="rw"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8z"></path></svg>&nbsp;->&nbsp;  Bugs
+          </li>
+      </details>
+      <br>
 
     </div>
   </div>
+  <br>
+  <br><br><br>
+  </div>
+  
 
 {% endblock %}
