--- a/base/templates/base/bug.html
+++ b/base/templates/base/bug.html
@@ -110,7 +110,8 @@
             <svg id="low"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8z"></path></svg>&nbsp;->&nbsp;  No bugs
           </li>
           <li>
-            <svg id="rw"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8z"></path></svg>&nbsp;->&nbsp;  Bugs
+            <svg id="rw"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8z"></path></svg>
+            <svg id="ow"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8z"></path></svg>&nbsp;->&nbsp;  Bugs|Hosted
           </li>
       </details>
       <br>
